# GroshyApp

./: .gitignore  .pylintrc  Groshy.ui  LICENSE  README.md  ShoppingListApp.code-workspace  mainMenu.ui  pyproject.toml  requirements.txt
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
diagrams/: .$Groshy-flow.drawio.bkp  Groshy-flow.drawio
src/Groshy/: __main__.py  abstract_db.py  cookbook_builder.py  ingredient.py  recipe.py  recipe_handler.py  recipe_scraper.py
src/groshy/: __init__.py  __main__.py  abstract_db.py  cmdLine_Main.py  cmd_line_functions.py  cookbook.py  cookbook_builder.py  errors.py  ingredient.py  log_conf.toml  main_menu.py  pantry.py  recipe.py  recipe_handler.py  shopping-list.py
src/groshy/.internal/: config.ini
src/groshy/gui/: __init__.py  bookshelf_screen.kv  bookshelf_screen.py  controller.py  cookbook_button.kv  cookbook_button.py  cookbook_form.kv  cookbook_form.py  cookbook_toc_screen.kv  cookbook_toc_screen.py  cookbooks_view.kv  cookbooks_view.py  groshy.kv  main_menu.kv  main_menu_window.py  recipe_form.kv  recipe_form.py  recipe_form_helpers.kv  recipe_form_helpers.py  recipe_form_utils.kv  recipe_form_utils.py  recipe_screen.kv  recipe_screen.py  splash_screen.kv  splash_screen.py  utils.kv  utils.py
tests/: conftest.py  test_cookbook.py  test_recipe.py  tstconfig.toml
