[tool.poetry]
name = "Groshy"
version = "0.1.0"
description = ""
authors = ["Ty <freemanty27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
recipe-scrapers = "^14.50.2"
ingredient-parser-nlp = "^0.1.0b5"
ruff = "^0.0.292"
pydantic = "^2.5.1"
pyqt6 = "^6.6.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
