
[project]
name = "Groshy"
version = "0.1.0"
description = ""
authors = [ 
    {name = "Ty Freeman", email = "<freemanty27@gmail.com>"}
    ]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "recipe-scrapers >= 14.50.2",
    "ingredient-parser-nlp == 1.3.2",
    "ruff >= 0.0.292",
    "pydantic >= 2.5.1",
    "kivy"
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
